# vyapaar-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SPEC.md  add_case_studies.py  docker-compose.yml  pyproject.toml  replace_emojis.py
.gemini/skills/archestra/: SKILL.md
.streamlit/: config.toml
archestra/: SKILL.md
archestra/references/: access-control.md  frameworks.md  mcp-gateway.md  security-advanced.md  security.md
demo/: automated_demo.py  cli_demo.py  dashboard.py  hello.py  test_st.py
demo/icons/heroins/: icons.json
deploy/: archestra.yaml  ngrok.yml
docs/: DASHBOARD_CODE_REVIEW.md  DASHBOARD_DESIGN.md  DASHBOARD_V2_SPEC.md  FOSS_BRAINSTORM.md  HACKATHON_DEMO_FLOW.md  HACKATHON_README.md  SLACK_SETUP.md  TUNNEL_SETUP.md
docs/internal/: CHANGELOG.md
docs/internal/checkpoints/: CHECKPOINT_v4.md  CHECKPOINT_v5.md
docs/internal/code-reviews/: CODE_REVIEW.md  CODE_REVIEW_v5.1.0_FOSS.md  CODE_REVIEW_v5.1.md  COMPREHENSIVE_CODE_REVIEW.md
scripts/: audit_dashboard.py  foundry_policies.sql  health_check.py  seed_policies.py  simulate_webhook.py  start-tunnel.sh  start_server.sh
src/vyapaar_mcp/: __init__.py  __main__.py  config.py  logging_config.py  models.py  security.py  server.py
src/vyapaar_mcp/audit/: __init__.py  logger.py
src/vyapaar_mcp/db/: __init__.py  postgres.py  redis_client.py
tests/: conftest.py  test_anomaly.py  test_budget.py  test_gleif.py  test_governance.py  test_metrics.py  test_models.py  test_ntfy.py  test_razorpay_bridge.py  test_resilience.py  test_slack.py  test_webhook.py
(+23 files in other folders)
