[project]
name = "vyapaar-mcp"
version = "0.0.0"
description = "Agentic Financial Governance MCP Server — The CFO for the Agentic Economy"
readme = "README.md"
authors = [
    { name = "guglxni", email = "aaryanguglani.cs21@rvce.edu.in" }
]
license = "AGPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "razorpay>=1.4.0",
    "httpx>=0.27.0",
    "redis[hiredis]>=5.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "fakeredis[lua]>=2.21.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "types-redis>=4.6.0",
]

[project.scripts]
vyapaar-mcp = "vyapaar_mcp:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
